4task/blue-lb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blue-service
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector: 
    name: blue
