4task/blue-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blue-service
  labels:
    app: blue
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector: 
    name: blue
