4task/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "localhost"
    http:
      paths:
      - path: /green
        pathType: Prefix
        backend:
          service:
            name: green-service
            port:
              number: 8080
      - path: /blue
        pathType: Prefix
        backend:
          service:
            name: blue-service
            port:
              number: 8080
